--- a/app/views/static_pages/dashboard.html.erb
+++ b/app/views/static_pages/dashboard.html.erb
@@ -1,3 +1,5 @@
+<p>&nbsp;</p>
+
 <header class="page-header">
     <div class="container">
       <h3 class="title">Admin Dashboard</h1>
@@ -31,7 +33,7 @@
 			  <a href="/dashboard/ftic">
 				<div class="icon bg"><i class="fa fa-book"></i></div>
 				<h6 class="title">First Time In College</h6>
-				<div class="text-small">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</div>
+				<div class="text-small">This queue contains all students who are classified as First Time in College (FTIC).</div>
 			  </a>
 			</div>
 			<div class="col-sm-4 col-md-4 service">
