--- a/app/views/ftic_modules_availables/edit.html.erb
+++ b/app/views/ftic_modules_availables/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container col-sm-12 col-md-12">
+<!-- <div class="container col-sm-12 col-md-12">
   <div class="col-sm-12 col-md-12 bottom-padding">
 
   	<section id="main">
@@ -7,13 +7,14 @@
           <h3 class="title">FTIC Module Availability</h3>
         </div>
      </header>
-
+ -->
 	<%= render 'form' %>
 
-	<%= link_to 'Show', @modules_available %> |
-	<%= link_to 'Back', ftic_modules_availables_path %>
+	<%#= link_to 'Show', @modules_available %> |
+	<%#= link_to 'Back', ftic_modules_availables_path %>
 
-	</section>
+	<!-- </section>
 
    </div>
  </div>
+ -->
