--- a/app/views/ftic_modules_availables/moduledetail.html.erb
+++ b/app/views/ftic_modules_availables/moduledetail.html.erb
@@ -1,8 +1,25 @@
 
 <p>&nbsp;</p>
 
+<%= form_for(@modules_availables,  :html => { :class => "form-horizontal"}) do |f| %>
+
+        <% if @modules_availables.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@modules_available.errors.count, "error") %> prohibited this modules_available from being saved:</h2>
+
+            <ul>
+            <% @modules_available.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+ <% end %>
+
 <div class="container">
-<% @modules_availables.each do |modules_available| %>	
+
+<% @ma.each do |modules_available| %>	
 	<header class="page-header">
     <div class="container">
       <h3 class="title">Student Information for <%= modules_available.f_name%>  <%= modules_available.l_name%> (<%=modules_available.znumber %>) </h1>
@@ -12,9 +29,7 @@
     <div class="row">
       <div class="sidebar col-sm-12 col-md-12" id="sidebar">
 		
-		  <!-- <header>
-			<h4 class="title">Module Information</h4>	
-		  </header> -->
+		
 		
 			<div class="col-sm-4 col-md-4 service alert alert-border">
 		  <a href="/fticadmin/<%= modules_available.id %>/edit">
@@ -23,6 +38,10 @@
 			<div class="text-small">
 				<div class="text-warning"><em><b>pending</b></em></div><br>
 				The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those intereste.
+				
+
+					  
+					
 			</div>	
 			 
 		  </a>
@@ -54,7 +73,7 @@
 			<h6 class="title">Deposit</h6>
 			<div class="text-small">
 				<div class="text-warning"><em><b>pending</b></em></div><br>
-				The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those intereste.
+				The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those intereste.				
 			</div>	
 		  </a>
 		</div>
@@ -76,6 +95,21 @@
 			<div class="text-small">
 				<div class="text-warning"><em><b>pending</b></em></div><br>
 				The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those intereste.
+
+				<br><br>
+
+				<div class="row">
+		            <div class="col-sm-6 ">
+		                <label for="ftic_modules_available_account">Availability</label><br>  
+		                <input checked="checked" id="ftic_modules_available_account_1" name="ftic_modules_available[account]" type="radio" value="1"> <i class="fa fa-unlock-alt"></i>  &nbsp;<input id="ftic_modules_available_account_0" name="ftic_modules_available[account]" type="radio" value="0"> <i class="fa fa-lock"></i>
+		             </div>
+
+		             <div class="col-sm-6 ">
+		                <label for="ftic_modules_available_accountbypass">Bypass</label><br>
+		                <input id="ftic_modules_available_accountbypass_1" name="ftic_modules_available[accountbypass]" type="radio" value="1"> <i class="fa fa-check"></i>&nbsp;<input checked="checked" id="ftic_modules_available_accountbypass_0" name="ftic_modules_available[accountbypass]" type="radio" value="0"><i class="fa fa-times-circle"></i>
+		             </div>
+		            
+		        </div>
 			</div>	
 		  </a>
 		</div>
