added financial aid award term to view

--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -845,7 +845,7 @@ Hello, <%= session[:cas_user] %>!
 					  			<table class="table table-striped text-left order-details">
 						  			<thead>
 						  				<tr>
-						  					<th class="product-name">Award</th><th class="product-total">Amount</th><th class="product-total">Offer Date</th>
+						  					<th class="product-name">Award</th><th class="product-total">Term</th><th class="product-total">Amount</th><th class="product-total">Offer Date</th>
 						  				</tr>
 						  			</thead>
 
